--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         function showResponse(answer) {
             const responseDiv = document.getElementById('response');
             if (answer === 'Yes') {
-                responseDiv.innerHTML = '❤️ Yay! I am so happy!';
+                responseDiv.innerHTML = '❤️ Yes!!! Walang bawian ah hahaha';
                 responseDiv.style.color = '#ff4b5c';
                 responseDiv.style.animation = 'none'; // Stops the animation after response
             } else {
-                responseDiv.innerHTML = 'Oh, that\'s okay!';
+                responseDiv.innerHTML = 'Oh, that\'s okay! Edi next time hehe';
                 responseDiv.style.color = '#4caf50';
                 responseDiv.style.animation = 'none'; // Stops the animation after response
             }
